# ETL_GameGenreAnalysis

./: .gitignore  Dockerfile  README.md  alembic.ini  dev.sh  docker_compose_configuration.yml  main.py  pyproject.toml  requirements.txt
.dev/: .env  autogenerate_migration.sh  build.sh  create_db.sh  drop_db.sh
.docker/: Dockerfile  docker_compose_configuration.yml
.docker/initdb/: 01-init-users-and-dbs.sh
alembic/: env.py
alembic/versions/: 693be165eaeb_update_isextracted_to_extractedat_.py  9a7cf47454a6_sync_models.py  a97c3bff30d3_.py
src/: SteamAPI.py  SteamAPIClient.py  main.py  user_src_service.py
src/db/: database_factory.py  user_repo.py
src/db/steam_users_id/: repo.py  users.py
src/db/user_src/: user_src_repo.py  users.py
src/db/utilities/: read_users_id_csv.py
src/etl/extract/: steam_client.py  steam_users_id.py
src/utilities/steam_users_id/: read_users_csv.py
test/db/: test_repo.py
test/http_client/: test_api_client.py
